<resources>
    <string name="app_name">LotteryNumbers</string>
    <string name="obtain_lottery_numbers">Obtain lottery numbers</string>
    <string name="lottery_generator">Lottery Generator</string>
    <string name="name">Name</string>
    <string name="welcome_to">Welcome to</string>
    <string name="lottery_main_image">Lottery main image</string>
    <string name="user_name">Name</string>
    <string name="go_back_button">Go back</string>
    <string name="your_lottery_numbers_are">Your lottery numberse are...!</string>
    <string name="share_your_numbers">Share your numbers</string>
    <string name="random_number_placeholder">%d</string>
    <string name="default_text">TextView</string>
</resources>